# drf_learnings

./: main.py  pyproject.toml
restframework_learning/: db.sqlite3  manage.py  models.dot
restframework_learning/api/: models.py  serializers.py  urls.py  views.py
restframework_learning/api/migrations/: 0001_initial.py
restframework_learning/restframework_learning/: asgi.py  settings.py  urls.py  wsgi.py
