[project]
name = "restframework-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref>=3.9.2",
    "django>=5.2.6",
    "django-extensions>=4.1",
    "djangorestframework>=3.16.1",
    "pillow>=11.3.0",
    "sqlparse>=0.5.3",
    "tzdata>=2025.2",
]
